clean up code, fix height of header on tablet and desktop views

--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,10 @@
 /*===========================*/
-/*===========Fonts===========*/
+/*========== Fonts ==========*/
 /*===========================*/
 
 
-/*-----------Playfair-----------*/
+/*----------- Playfair -----------*/
+
 @font-face {
     font-family: 'playfair_displayregular';
     src: url('../fonts/playfairdisplay-regular-webfont.eot');
@@ -52,7 +53,8 @@
     font-style: normal;
 }
 
-/*-----------Raleway-----------*/
+/*----------- Raleway -----------*/
+
 @font-face {
     font-family: 'ralewaylight';
     src: url('../fonts/raleway-light-webfont.eot');
@@ -105,7 +107,7 @@
 
 
 /*===========================*/
-/*=======Default Styles======*/
+/*====== Default Styles =====*/
 /*===========================*/
 
 .container {
@@ -135,7 +137,7 @@ a:hover {
 
 
 /*===========================*/
-/*=======Helper Classes======*/
+/*====== Helper Classes =====*/
 /*===========================*/
 
 .clearfix:before,
@@ -148,11 +150,12 @@ a:hover {
 
 
 /*===========================*/
-/*=========Page Proper=======*/
+/*======== Page Proper ======*/
 /*===========================*/
 
 
-/*-----------Header-----------*/
+/*---------- Header ----------*/
+
 .header-top {
   width: 100%;
   height: 120px;
@@ -221,7 +224,8 @@ nav ul li {
 }
 
 
-/*-----------Hero Banner-----------*/
+/*---------- Hero Banner ----------*/
+
 .hero-container {
   width: 100%;
   height: 350px;
@@ -274,15 +278,9 @@ nav ul li {
   font-weight: normal;
 }
 
-/*.separator {
-  width: 100%;
-  height: 1px;
-  margin: 30px 0 10px;
-  background-color: #d7d7d7;
-}*/
 
+/*---------- Categories ----------*/
 
-/*-----------Categories-----------*/
 .shop {
   width: 100%;
   height: auto;
@@ -376,7 +374,8 @@ nav ul li {
 }
 
 
-/*-----------Featured Products-----------*/
+/*---------- Featured Products ----------*/
+
 .featured-products {
   width: 100%;
   padding: 3px 0;
@@ -413,7 +412,8 @@ nav ul li {
 }
 
 
-/*-----------Call To Action (Subscribe)-----------*/
+/*---------- Call To Action (Subscribe) ----------*/
+
 .call-to-action {
   width: auto;
   height: 230px;
@@ -477,7 +477,8 @@ button:hover {
 }
 
 
-/*-----------Footer-----------*/
+/*---------- Footer ----------*/
+
 footer {
   padding: 20px;
   color: #fff;
@@ -523,12 +524,14 @@ footer {
 }
 
 
+
 /*===========================*/
-/*========Media Queries======*/
+/*======= Media Queries =====*/
 /*===========================*/
 
 
-/*-----------Tablet-----------*/
+/*----------- Tablet -----------*/
+
 @media all and (min-width: 600px){
 
   body {
@@ -537,6 +540,7 @@ footer {
 
   .header-top {
     height: 80px;
+    padding: 10px 0;
     flex-wrap: wrap;
   }
 
@@ -678,7 +682,7 @@ footer {
 }
 
 
-/*-----------Desktop-----------*/
+/*----------- Desktop -----------*/
 
 @media all and (min-width: 1240px) {
 
